--- a/stylesheet01.css
+++ b/stylesheet01.css
@@ -1,141 +1,133 @@
-*{
-	text-decoration: none;
+* {
 	font-family: 'Agency FB';
 	box-sizing: border-box;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
-.header{
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style-type: none;
+}
+
+.clearfix {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.margin {
+	margin: 0 auto;
+}
+
+.background {
 	background-color: #980000;
-	height: 100px;
-	color: #FFFFFF;
 }
 
-h1{
+/*header*/
+
+.header {
+	width: 90%;
+	height: 100px;
+	padding-top: 2%;
+}
+
+.header > h1 {
+	color: white;
 	float: left;
-	padding-left: 150px;
+}
+
+.gnb > ul {
+	float: right;
 	padding-top: 10px;
 }
 
-.nav{
-	float: right;
-	padding-right: 150px;
-	text-decoration: none;
-	margin-top: 20px;
-	font-size: 20px;
-}
-
-.nav > ul{
-	list-style-type: none;
-}
-
-.nav > ul > li{
+.gnb > ul > li {
 	float: left;
-	margin-left: 50px;
+	padding-left: 30px;
 }
 
-.nav > ul > li > a{
-	color: #FFFFFF;
-	font-size : 30px;
+.gnb > ul > li > a {
+	color: white;
 }
 
-.section{
-	height: 500px;
-}
-.div{
-	background-image: url('img/Liverpool.jpg');
-	background-position: center;
+/*section1*/
+
+.article1 {
+	width: 100%;
+	height: 400px;
+	background: url(img/Liverpool.jpg) center no-repeat;
 	background-size: cover;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
 }
 
-.headline{
+.article1 > p {
+	padding-top: 8%;
 	font-size: 100px;
-	text-align: center;
-	padding-top: 100px;
 	color: #FFE400;
+	text-align: center;
 }
 
-.div02{
-	width: 100%;
+/*section2*/
+
+.section2 {
 	background-color: #980000;
 	height: 500px;
-	color: #FFFFFF;
 }
 
-.profile{
-	height:500px;
+.section2 > div {
+	width: 80%;
+	padding-top: 5%;
+}
+
+.article_img > img {
+	width: 400px;
+	height: 400px;
+	border-radius: 200px;
 	float: left;
 }
 
-.profile > img{
-	height:400px;
-	width:400px;
-	margin-top: 50px;
-	margin-left:350px;
-	border-radius: 200px;
-}
-
-.myself{
-	float:left;
-	font-size:25px;
+.section2_article {
+	color: white;
+	float: right;
 	text-align: center;
-	margin-top: 60px;
-	margin-left: 350px;
+	font-size: 25px;
+	line-height: 60px;
 }
 
-.myself > p{
-	list-style-type: none;
-	margin-bottom: 10px;
+/*section3*/
+
+.padding-left {
+	padding-left: 40px;
 }
 
-.mentor{
-	height:400px;
-	float:left;
+.section3 {
+	width: 80%;
+	padding-top: 30px;
+	padding-bottom: 30%;
 }
 
-.mentor > h2{
-	margin: 20px 0px 20px 200px;
+.section3 > article {
+	float: left;
 }
 
-.men1{
-	float:left;
+.section3 > article > img {
+	width: 300px;
+	height: 300px;
 }
 
-.men1 > img{
-	height:300px;
-	width:300px;
-	margin-left: 300px;
-}
+/*footer*/
 
-.men2{
-	float:left;
-}
-
-.men2 > img{
-	height:300px;
-	width:300px;
-	margin-left: 100px;
-}
-
-.men3{
-	float:left;
-}
-
-
-.men3 > img{
-	height:300px;
-	width:300px;
-	margin-left: 100px;
-}
-
-.footer{
+.footer {
+	height: 100px;
 	font-size: 30px;
-	clear: both;
-	padding-top: 3px;
-	padding-bottom: 3px;
-	background-color: #980000;
-	color: #FFFFFF;
+	color: white;
 	text-align: center;
+	background-color: #980000;
+}
+
+.footer > p {
+	padding-top: 2%;
 }
